# claude-readability-hook

./: .editorconfig  .gitignore  .mise.toml  README.md  compose.override.yml  compose.yml
.github/workflows/: ci.yml  security.yml
apps/extractor/: .dockerignore  Dockerfile  pyproject.toml  server.py
apps/extractor/app/: api.py  main.py  models.py
apps/extractor/app/services/: metrics.py  score_calculator.py  trafilatura_extractor.py
apps/extractor/tests/: conftest.py
apps/extractor/tests/api/: test_api.py
apps/extractor/tests/services/: test_score_calculator.py  test_trafilatura_extractor.py
apps/gateway/: .dockerignore  Dockerfile  biome.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/gateway/src/: index.ts  server.ts
apps/gateway/src/clients/: extractor.ts  readability.ts  renderer.ts  resource-blocking-patterns.ts
apps/gateway/src/core/: branded-types.ts  errors.ts  types.ts
apps/gateway/src/features/extract/: controller.ts  index.ts  schemas.ts  ssr-detector.ts  usecase.ts
apps/gateway/src/features/health/: controller.ts
apps/gateway/src/lib/: cache.ts  config.ts  http-utils.ts  metrics-plugin.ts  metrics.ts  rate-limiter.ts  result.ts  ssrf-guard.ts  text-utils.ts  url-transformer.ts
apps/gateway/src/utils/: result.ts
apps/gateway/tests/api/: extract.test.ts  health.test.ts  server.test.ts
apps/gateway/tests/contract/: extractor-service.test.ts
apps/gateway/tests/helpers/: fixtures.ts  mock-setup.ts  test-server.ts  testing.ts
apps/gateway/tests/integration/: domain-handlers.test.ts  extract-flow.test.ts
apps/gateway/tests/observability/: metrics.behavior.test.ts  metrics.test.ts
services/renderer/: .dockerignore  Dockerfile  biome.json  package-lock.json  package.json  renderer.js
services/renderer/tests/: renderer.general-error.test.js  renderer.success.test.js  renderer.timeout.test.js
(+16 files in other folders)
